Removed accidentally committed JDK 1.5 methods (Integer.valueOf()).